--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -1,14 +1,19 @@
-push:
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v4
-      with:
-        repository: github.com/NorDevLab/nordevlab.github.io
-        ref: 'main'
-        token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-    - name: setup git config
-      run: |
-        git config user.name "GitHub Actions Bot"
-        git config user.email "<>"
-    - run: git add . && git commit -am 'sync'
-    - run: git push origin main
+name: sync
+on:
+  pull_request:
+    branches: 'main'
+jobs:
+  sync:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          repository: github.com/NorDevLab/nordevlab.github.io
+          ref: 'main'
+          token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
+      - name: setup git config
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+      - run: git add . && git commit -am 'sync'
+      - run: git push origin main
