--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: create folder
-        run: mkdir repo-site
+        run: mkdir repo-site && pwd && ls -lah
         
       - uses: actions/checkout@v4
         with:
@@ -22,4 +22,4 @@ jobs:
           git config user.email "foo@bar.com"
       #- run: git add . && git commit -am 'sync'
       #- run: git push origin main
-      - run: cd repo-site && ls -lah && pwd
+      - run: pwd && ls -la
