--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -22,4 +22,4 @@ jobs:
       #    git config user.email "foo@bar.com"
       #- run: git add . && git commit -am 'sync'
       #- run: git push origin main
-      - run: pwd && ls -la
+      - run: cd repo-site && pwd && ls -la
