--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -22,8 +22,8 @@ jobs:
           
       - name: Copy and push
         run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "foo@bar.com"
+          #git config user.name "GitHub Actions Bot"
+          #git config user.email "foo@bar.com"
           ls
           cd repo-site-current
           ls -lah
