--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -22,12 +22,16 @@ jobs:
           
       - name: Copy and push
         run: |
-          #git config user.name "GitHub Actions Bot"
-          #git config user.email "foo@bar.com"
-          ls
-          cd repo-site-current
+          rm -rf repo-site-current/.github && \
+          rm -rf repo-site-current/.git && \
+          mv * repo-site-current/* repo-site/ && \
+          cd repo-site && \
+          git config user.name "GitHub Actions Bot"
+          git config user.email "foo@bar.com"
+          #ls
+          #cd repo-site-current
           ls -lah
           
       #- run: git add . && git commit -am 'sync'
       #- run: git push origin main
-      - run: cd repo-site && pwd && ls -la
+      #- run: cd repo-site && pwd && ls -la
