--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -6,7 +6,10 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-        
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          
       - name: Chekout remote repo
         uses: actions/checkout@v4
         with:
@@ -19,6 +22,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: repo-site-current
+      
+      - name: build app
+        working-directory: ./repo-site-current
+        run: npm ci && npm run build
+        
           
       - name: Copy
         run: |
